--- a/src/components/card/index.module.scss
+++ b/src/components/card/index.module.scss
@@ -1,4 +1,5 @@
 .card {
+    //display="flex" justifyContent="space-between" alignItems="center"
     display: flex;
     justify-content: space-between;
     align-items: center;
